--- a/Exercises/exercise1/makefile
+++ b/Exercises/exercise1/makefile
@@ -1,21 +1,21 @@
 GHDL=ghdl
 GHDLFLAGS= --ieee=synopsys
-GHDLRUNFLAGS= --vcd=casar.vcd
+GHDLRUNFLAGS= --vcd=piiri1.vcd
 
 # Default target : elaborate
 all : elab
 
 # Elaborate target.  Almost useless
 elab : force
-	$(GHDL) -c $(GHDLFLAGS) -e caesar_tb
+	$(GHDL) -c $(GHDLFLAGS) -e piiri1_tb
 
 # Run target
 run : force
-	$(GHDL) -c $(GHDLFLAGS) -r caesar_tb $(GHDLRUNFLAGS)
+	$(GHDL) -c $(GHDLFLAGS) -r piiri1_tb $(GHDLRUNFLAGS)
 
 # Targets to analyze libraries
 init: force
-	$(GHDL) -a $(GHDLFLAGS) caesar.vhdl
-	$(GHDL) -a $(GHDLFLAGS) caesar_tb.vhdl
+	$(GHDL) -a $(GHDLFLAGS) piiri1.vhd
+	$(GHDL) -a $(GHDLFLAGS) piiri1_tb.vhd
 
 force:
